<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:scaleX="1"
    tools:context=".Controller.MainActivity">

...
                android:layout_marginTop="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/buttonAddNotebook"
                android:layout_width="215dp"
                android:layout_height="88dp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/orange"
                android:text="@string/notebook_add_new_button"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintTop_toBottomOf="@+id/divider2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
...


    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_new_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/listOfNotes"
...
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/listOfNotes"
        app:layout_constraintStart_toEndOf="@id/buttonMainActivityNavigationDrawer"
        app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

    <ImageButton
        android:id="@+id/buttonMainActivityNavigationDrawer"
        android:layout_width="48dp"
        android:layout_height="48dp"
...
