<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkOrange"
        android:fadingEdge="horizontal|vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/noteSelectionLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkOrange"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/orange"
                android:fadingEdge="horizontal|vertical"
                android:text="noteTitle"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noteDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="noteDescription"
                android:textSize="12dp"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/deleteNote"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/icon_erase" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>