<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteEditorActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
...
                android:layout_alignParentTop="true"
                android:layout_marginTop="-27dp"
                android:layout_marginBottom="40dp"
                android:scrollbars="vertical">

                <com.github.irshulx.Editor
                    android:id="@+id/editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="140dp"
...
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_close_white_48dp" />

    <ImageView
        android:id="@+id/imageView_save_note"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/tick" />
...
