...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/noteeditor_title_text"
            android:layout_width="336dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/note_editor_title_hint_text"
            android:inputType="textPersonName"
            android:singleLine="true" />
...
